--- a/index.css
+++ b/index.css
@@ -1,15 +1,60 @@
-#objectButtonsWrapper{
-    background-color: yellow;
-    width: 100px;
-    padding: 5px;
-    border-radius: 10px;
-    margin-top: 20px;
+body, main, p, div, button {
+  margin: 0;
+  padding: 0;
 }
-#objectsTitle{
-    color: rgb(12, 22, 32);
+
+* {
+  box-sizing: border-box;
 }
-#objectButtons{
-    display: flex;
-    align-items: center;
-    justify-content: center;
+
+ul, li {
+  list-style: none;
 }
+
+a {
+  text-decoration: none;
+  color: black;
+}
+
+div.container {
+  display: flex;
+  justify-content: space-between;
+}
+div.container .section01 {
+  display: flex;
+  flex-direction: column;
+}
+div.container .section02 {
+  display: flex;
+  flex-direction: column;
+}
+div.container .section03 {
+  display: flex;
+  flex-direction: column;
+}
+div.container .section03 div {
+  display: flex;
+}
+div.container .section03 div button {
+  width: 70px;
+  height: 70px;
+  border: none;
+  background-color: transparent;
+  padding: 10px;
+}
+div.container .section03 div button img {
+  width: 100%;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  -o-object-fit: fill;
+     object-fit: fill;
+}
+
+div.canvas-box {
+  border: 1px solid #000;
+  width: 531px;
+  height: 682px;
+  margin: 0px auto;
+  position: relative;
+}/*# sourceMappingURL=index.css.map */
