--- a/index.css
+++ b/index.css
@@ -18,7 +18,7 @@ a {
 
 div.container {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
 }
 div.container .section01 {
   display: flex;
@@ -28,33 +28,30 @@ div.container .section02 {
   display: flex;
   flex-direction: column;
 }
-div.container .section03 {
-  display: flex;
-  flex-direction: column;
-}
-div.container .section03 div {
+div.container .section02 div {
   display: flex;
 }
-div.container .section03 div button {
+div.container .section02 div button {
   width: 70px;
   height: 70px;
   border: none;
   background-color: transparent;
   padding: 10px;
 }
-div.container .section03 div button img {
+div.container .section02 div button img {
   width: 100%;
   height: 100%;
   background-repeat: no-repeat;
   background-size: cover;
   -o-object-fit: fill;
      object-fit: fill;
+  margin: 20px;
 }
 
 div.canvas-box {
   border: 1px solid #000;
-  width: 531px;
-  height: 682px;
+  width: 532px;
+  height: 672px;
   margin: 0px auto;
   position: relative;
 }/*# sourceMappingURL=index.css.map */
