--- a/index.css
+++ b/index.css
@@ -16,42 +16,160 @@ a {
   color: black;
 }
 
+button {
+  border: none;
+  background-color: transparent;
+}
+
 div.container {
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 div.container .section01 {
   display: flex;
   flex-direction: column;
+  margin-right: 50px;
+}
+div.container .section01 button {
+  width: 32px;
+  height: 32px;
+  margin: 0px 0px 5px auto;
+}
+div.container .section01 button img {
+  transition: 500ms;
+  width: 100%;
+  height: 100%;
+}
+div.container .section01 button img:hover {
+  transform: rotate(-360deg);
+}
+div.container .section01 div.canvas-box {
+  border: 1px solid #000;
+  width: 532px;
+  height: 672px;
+  margin: 0px auto;
+  position: relative;
 }
 div.container .section02 {
   display: flex;
   flex-direction: column;
+  width: 350px;
 }
-div.container .section02 div {
+div.container .section02 p {
+  font-weight: bolder;
+  margin: 18px 0px 7px 0px;
+}
+div.container .section02 div.sticker {
   display: flex;
+  width: 100%;
 }
-div.container .section02 div button {
+div.container .section02 div.sticker button {
   width: 70px;
   height: 70px;
   border: none;
   background-color: transparent;
   padding: 10px;
+  cursor: pointer;
 }
-div.container .section02 div button img {
+div.container .section02 div.sticker button img {
   width: 100%;
   height: 100%;
   background-repeat: no-repeat;
   background-size: cover;
   -o-object-fit: fill;
      object-fit: fill;
-  margin: 20px;
 }
-
-div.canvas-box {
-  border: 1px solid #000;
-  width: 532px;
-  height: 672px;
-  margin: 0px auto;
-  position: relative;
+div.container .section02 div.bgC {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+div.container .section02 div.bgC .custom-file-upload, div.container .section02 div.bgC button {
+  width: 48%;
+  height: 35px;
+  font-weight: bold;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  border: 1.5px solid #000;
+}
+div.container .section02 div.bgC .custom-file-upload:hover, div.container .section02 div.bgC button:hover {
+  background-color: #fcb8b8;
+}
+div.container .section02 div.bgC #myImg {
+  display: none;
+}
+div.container .section02 .text {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+div.container .section02 .text input {
+  width: 68%;
+  height: 35px;
+  border: 1.5px solid #000;
+}
+div.container .section02 .text button {
+  width: 28%;
+  height: 35px;
+  border: 1.5px solid #000;
+  font-weight: bolder;
+  cursor: pointer;
+}
+div.container .section02 .text button:hover {
+  background-color: #fcb8b8;
+}
+div.container .section02 .draw {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+div.container .section02 .draw input {
+  width: 60%;
+  height: 35px;
+  border: 1.5px solid #000;
+  cursor: pointer;
+}
+div.container .section02 .draw button {
+  width: 36%;
+  height: 35px;
+  border: 1.5px solid #000;
+  font-weight: bold;
+  cursor: pointer;
+}
+div.container .section02 .draw button:hover {
+  background-color: #fcb8b8;
+}
+div.container .section02 .groupBtn {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+div.container .section02 .groupBtn button {
+  width: 48%;
+  height: 35px;
+  font-weight: bold;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  border: 1.5px solid #000;
+}
+div.container .section02 .groupBtn button:hover {
+  background-color: #fcb8b8;
+}
+div.container .section02 a {
+  width: 100%;
+  height: 50px;
+  border-radius: 33px;
+  background-color: #FFD600;
+  border: 4px solid #000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 17px;
+  font-weight: bolder;
+  margin-top: 20px;
 }/*# sourceMappingURL=index.css.map */
