--- a/index.scss
+++ b/index.scss
@@ -12,46 +12,179 @@ a{
     text-decoration: none;
     color: black;
 }
-
-h1{
-
+button{
+    border: none;
+    background-color: transparent;
 }
 
 div.container{
     display: flex;
     justify-content: center;
+    align-items: center;
     .section01{
         display: flex;
         flex-direction: column;
+        margin-right: 50px;
+        button{
+            width: 32px;
+            height: 32px;
+            margin:0px 0px 5px auto;
+            
+            img{
+                transition: 500ms;
+                width: 100%;
+                height: 100%;
+                &:hover{
+                    transform: rotate(-360deg);
+                }
+            }
+        }
+        div.canvas-box{
+            border: 1px solid #000;
+            width: 532px;
+            height: 672px;
+            margin: 0px auto;
+            position: relative;
+        
+        }
     }
     .section02{
         display: flex;
         flex-direction: column;
-        div{
+        width: 350px;
+        p{
+            font-weight: bolder;
+            margin: 18px 0px 7px 0px;
+            // &:nth-child(1){
+            //     margin-top: -10px;
+            // }
+        }
+        div.sticker{
             display: flex;
+            width: 100%;
             button{
                 width: 70px;
                 height: 70px;
                 border: none;
                 background-color: transparent;
                 padding: 10px;
+                cursor: pointer;
                 img{
                     width: 100%;
                     height: 100%;
                     background-repeat: no-repeat;
                     background-size: cover;
                     object-fit: fill;
-                    margin: 20px;
+                    
                 }
             }
         }
+
+        div.bgC{
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
+            .custom-file-upload, button {
+                width: 48%;
+                height: 35px;
+                font-weight: bold;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                cursor: pointer;
+                border: 1.5px solid #000;
+                &:hover{
+                    background-color: #fcb8b8;
+                }
+            }
+            #myImg {
+                display: none;
+            }
+        }
+
+        .text{
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
+            input{
+                width:68%;
+                height: 35px;
+                border: 1.5px solid #000;
+            }
+            button{
+                width: 28%;
+                height: 35px;
+                border: 1.5px solid #000;
+                font-weight: bolder;
+                cursor: pointer;
+                &:hover{
+                    background-color: #fcb8b8;
+                }
+            }
+        }
+
+        .draw{
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
+            input{
+                width: 60%;
+                height: 35px;
+                border: 1.5px solid #000;
+                cursor: pointer;
+            }
+            button{
+                width: 36%;
+                height: 35px;
+                border: 1.5px solid #000;
+                font-weight: bold;
+                cursor: pointer;
+                &:hover{
+                    background-color: #fcb8b8;
+                }
+            }
+        }
+
+        .groupBtn{
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
+            button{
+                width: 48%;
+                height: 35px;
+                font-weight: bold;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                cursor: pointer;
+                border: 1.5px solid #000;
+                &:hover{
+                    background-color: #fcb8b8;
+                }
+            }
+        }
+        a{
+            width: 100%;
+            height: 50px;
+            border-radius: 33px;
+            background-color: #FFD600;
+            border: 4px solid #000;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 17px;
+            font-weight: bolder;
+            margin-top: 20px;
+        }
     }
 }
-div.canvas-box{
-    border: 1px solid #000;
-    width: 532px;
-    height: 672px;
-    margin: 0px auto;
-    position: relative;
 
-}
+
+
+
+
+  
+
+  
+  
+  
